Add some plugins

--- a/README
+++ b/README
@@ -12,3 +12,14 @@ Switch to the `~/.vim` directory, and fetch submodules:
     cd ~/.vim
     git submodule init
     git submodule update
+
+
+plugins:
+
+ctrlp
+delimitMate
+neocomplcache
+nerdcommenter
+nerdtree
+syntastic
+tagbar
